--- a/ansible/roles/app/handlers/main.yml
+++ b/ansible/roles/app/handlers/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Restart nginx
+  service:
+    name: nginx
+    state: restarted
+
 - name: Reload systemd
   command: systemctl daemon-reexec
 
