--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -8,9 +8,6 @@
       - python3
       - python3-pip
       - python3-venv
-      - mariadb-client
-      - libmariadb-dev
-      - build-essential      
     state: present
     update_cache: yes
 
@@ -19,9 +16,15 @@
   args:
     creates: /opt/flaskenv
 
-- name: Install Flask
-  command: /opt/flaskenv/bin/pip install flask
-  notify: Restart Flask    
+- name: Install Python dependencies in venv
+  pip:
+    name:
+      - flask
+      - boto3
+      - pymysql
+    virtualenv: /opt/flaskenv
+    virtualenv_python: python3
+  notify: Restart Flask
 
 - name: Deploy Flask app from template
   template:
@@ -48,6 +51,7 @@
   notify:
     - Reload systemd
     - Restart Flask
+
 
 - name: Enable Flask
   systemd:
@@ -83,3 +87,9 @@
     name: nginx
     state: started
     enabled: yes
+    
+- name: Ensure falsk is running
+  systemd:
+    name: flask
+    state: started
+    enabled: yes    
