Grafana EC2, security group + setup using ansible

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,5 +1,12 @@
 ---
-- hosts: app
+- name: Deploy application
+  hosts: app
   become: yes
   roles:
     - app
+
+- name: Install Grafana
+  hosts: grafana
+  become: yes
+  roles:
+    - grafana
