Prometheus EC2, security group + ansible setup

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -10,3 +10,9 @@
   become: yes
   roles:
     - grafana
+
+- name: Install Prometheus
+  hosts: prometheus
+  become: yes
+  roles:
+    - prometheus
