Update falsk role name from ansible

--- a/ansible/roles/flask/tasks/main.yml
+++ b/ansible/roles/flask/tasks/main.yml
@@ -5,6 +5,8 @@
       - nginx
       - nano
       - vim
+      - stress
+      - stress-ng
       - python3
       - python3-pip
       - python3-venv
