--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,9 +1,9 @@
 ---
 - name: Deploy application
-  hosts: app
+  hosts: flask
   become: yes
   roles:
-    - app
+    - flask
 
 - name: Install Grafana
   hosts: grafana
