--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,24 @@
         "panel": "shared"
       },
       "problemMatcher": []
+    },
+    {
+    "label": "Terraform Apply",
+    "type": "shell",
+    "command": "terraform apply --auto-approve",
+    "options": {
+        "cwd": "${workspaceFolder}/terraform",
+        "shell": {
+        "executable": "C:\\Program Files\\Git\\bin\\bash.exe",
+        "args": ["--login", "-i", "-c"]
+        }
+    },
+    "presentation": {
+        "reveal": "always",
+        "panel": "shared"
+    },
+    "problemMatcher": []
     }
+  
   ]
 }
