Update security group of flask EC2, create metrics + metric route in flask app -> prometheus-client

--- a/ansible/roles/flask/tasks/main.yml
+++ b/ansible/roles/flask/tasks/main.yml
@@ -24,6 +24,7 @@
       - flask
       - boto3
       - pymysql
+      - prometheus-client
     virtualenv: /opt/flaskenv
     virtualenv_python: python3
   notify: Restart Flask
