--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
 _tests
 deployment_script.sh
-terraform/.terraform/
-terraform/terraform.tfstate
-terraform/*.txt
-terraform/*.exe
-terraform/*.hcl
-terraform/*.info
-terraform/*.backup
-terraform/*.tfvars
-terraform/*.ini
-terraform/*.pem
-*.tfstate
+*.txt
+*.exe
+*.hcl
+*.info
+*.backup
+*.tfvars
+*.ini
+*.pem
 ansible/inventory
 ansible/monitoring*
 ansible/roles/app/templates/flask.service.j2
